psuedo elements before after

--- a/index.html
+++ b/index.html
@@ -47,6 +47,40 @@
     <label for="name">NAME</label>
     <input type="text" name="name" id="name">
 
+    <hr> 
+
+    <h2>LINKS</h2>
+    <nav class="link">
+        <a href="#aaa">Home</a>
+        <a href="#bbb">Product</a>
+        <a href="#ccc">Portfolio</a>
+    </nav>
+<br><br><br>
+    <nav class="cw">
+        <a href="#"><i class="fa-solid fa-angles-right"></i> Clarusway</a>
+        <a href="#"><i class="fa-solid fa-house"></i> Home</a>
+        <a href="#"><i class="fa-regular fa-address-card"></i> About</a>
+    </nav>
+
+    <h2><i class="fa-brands fa-elementor"></i>Pseudo Elements</h2>
+
+    <p class="p-elements">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat temporibus recusandae dolore aut error, dolor magni at reiciendis voluptate illo explicabo esse maxime vitae, ab harum voluptatibus iste laborum mollitia, autem quia repellendus iure nisi tempora cum. Harum, aliquam. Neque minima dolor porro nesciunt maiores omnis eaque eius, et soluta.
+    </p>
+
+    <h2>BEFORE-AFTER ELEMENTS</h2>
+
+    <ul class="before-after">
+        <li>mercedes</li>
+        <li>bmw</li>
+        <li>ferrari</li>
+        <li>tesla</li>
+        <li>togg</li>
+    </ul>
+
+
+
+
 </body>
 
 </html>
